[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# 覆盖率配置
[profile.coverage]
inherits = "dev"
debug = true
opt-level = 0
overflow-checks = false

# 测试配置
[profile.test]
debug = true
opt-level = 0
